# bms-resource-toolbox

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README-BOFTT.md  README.md  aery_fix.py  bigpack_folder_merge_folders_with_artists.py  bigpack_folder_move.py  bigpack_folder_split_with_first_char.py  bigpack_folder_undo_split_bms_folder.py  bms_events_jump_to_work_info.py  bms_folder_append_artist_name_by_bms.py  bms_folder_append_name_by_bms.py  bms_folder_copy_name_with_num.py  bms_folder_generate_info_table.py  bms_folder_remove_unneed_media_file.py  bms_folder_scan_similar.py  bms_folder_set_artist_name_by_bms.py  bms_folder_set_folder_name_by_bms.py  bms_folder_set_name_by_bms.py  bms_folder_transfer_audio.py  bms_folder_transfer_video.py  bms_folder_undo_set_name.py  clippy.toml  create_folder.py  deny.toml  f_check_folders.py  f_generate_info_table.py  f_remove_empty_folder.py  f_remove_unneed_media_file.py  f_set_name_by_another_folder.py  f_set_name_by_bms.py  f_transfer_audio.py  f_transfer_video.py  f_undo_set_name.py  flake.nix  generate_info_table.py  jump_to_website.py  (+21 more)
.cursor/rules/: bms-project.mdc  nix-integration.mdc  rust-development.mdc
.github/workflows/: release-please.yml  rust-ci.yml  rust.yml
be-music-cabinet/: Cargo.toml  README.md  README_CLI.md  README_COMMAND_SUMMARY.md  README_PACK.md
be-music-cabinet/examples/: basic_usage.rs
be-music-cabinet/src/: bms.rs  fs.rs  lib.rs  main.rs  options.rs
be-music-cabinet/src/bms/: bms_event.rs  work.rs
be-music-cabinet/src/fs/: moving.rs  rawpack.rs  sync.rs
be-music-cabinet/src/media/: audio.rs  video.rs
be-music-cabinet/src/options/: pack.rs  rawpack.rs  root.rs  root_bigpack.rs  root_dir_option.rs  root_event.rs  work.rs  work_dir_option.rs
benches/: async_performance.rs
bms/: __init__.py  encoding.py  encodings.py  parse.py  work.py
bms_fs/: __init__.py  rawpack.py  sync.py
bms_media/: __init__.py  audio.py  video.py
cli/: Cargo.toml  README_CLI.md  README_COMMAND_SUMMARY.md
cli/cli/: CHANGELOG.md
cli/examples/: basic_usage.rs
cli/src/: bms.rs  fs.rs  lib.rs
cli/src/bms/: bms_event.rs
cli/src/fs/: lock.rs  moving.rs  rawpack.rs  sync.rs
cli/src/media/: audio.rs  video.rs
cli/src/options/: bms_event.rs  pack.rs  rawpack.rs  root.rs  root_bigpack.rs  root_event.rs  work.rs
docs/superpowers/plans/: 2026-05-01-python-parity.md
fs/: __init__.py  input.py  move.py  name.py  rawpack.py
fs_sync/: __init__.py  preset.py
gui/: Cargo.toml
gui/gui/: CHANGELOG.md
gui/src/: main.rs  parser.rs
lang-core/: Cargo.toml
lang-core/src/: lib.rs
lang-derive/: Cargo.toml
lang-derive/src/: lib.rs
media/: audio.py  video.py
options/: base.py  bms_events.py  bms_folder.py  bms_folder_bigpack.py  bms_folder_event.py  bms_folder_media.py  rawpack.py  rawpack_set_num.py
scripts/: pack.py  pack_hq_to_lq.py  pack_raw_to_hq.py  pack_setup_rawpack_to_hq.py  pack_update_rawpack_to_hq.py
scripts_bms_folder/: generate_info_table.py  merge_folders_with_artists.py  remove_empty_folder.py  remove_unneed_media_file.py  set_artist_name_by_bms.py  set_name_by_bms.py  transfer_audio.py  transfer_video.py  undo_set_name.py
scripts_other/: boftt_jump_to_work_info.py  move_files_across_folder.py  remove_empty_folder.py  remove_zero_size_media_files.py  split_bms_folder_with_first_char.py  undo_split_bms_folder.py
scripts_rawpack/: rawpack_unzip_to_bms_folder.py
scripts_soft_syncing/: soft_syncing_folder.py
src/: async_utils.rs  bms.rs  cli.rs  error.rs  event.rs  folder.rs  fs.rs  lib.rs  main.rs  media.rs  options.rs  pack.rs  scripts.rs  tui.rs  util.rs  wasted.rs
src/bms/: dir.rs  encoding.rs  mod.rs  parse.rs  types.rs  work.rs
src/cli/: input.rs
src/commands/: bigpack.rs  event.rs  folder.rs  media.rs  mod.rs  pack.rs  rawpack.rs
src/event/: folder.rs  jump.rs
src/folder/: media_ops.rs  ops.rs  pack_ops.rs
src/fs/: mod.rs  move_ops.rs  name.rs  pack_move.rs  rawpack.rs  sync.rs  utils.rs  walk.rs
src/media/: audio.rs  convert.rs  video.rs
src/options/: bms_events.rs  bms_folder.rs  bms_folder_bigpack.rs  bms_folder_event.rs  bms_folder_media.rs  input.rs  rawpack.rs  validator.rs
src/pack/: archive.rs  generate.rs  unzip.rs
src/scripts/: pack.rs
src/wasted/: aery_fix.rs
tests/: async_bms_tests.rs  async_fs_tests.rs
wasted/: aery_fix.py  bms_folder_create_empty.py
