[package]
name = "bms-resource-toolbox"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
encoding_rs = "0.8"
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
thiserror = "2"
sha2 = "0.10"
strsim = "0.11"
regex = "1"
filetime = "0.2"

[lints.clippy]
pedantic = "warn"
