[package]
name = "bms-resource-toolbox"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
zip = "3"
sevenz-rust = "0.2"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
encoding_rs = "0.8"
regex = "1"
filetime = "0.2"


[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"

[profile.release]
lto = true

[lib]
path = "src/lib.rs"
