[package]
name = "bms-resource-toolbox"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
zip = "8"
sevenz-rust = "0.6"
sha2 = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"
encoding_rs = "0.8"
regex = "1"
filetime = "0.2"
anyhow = "1"
rust_xlsxwriter = "0.5"
strsim = "0.10"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "async_performance"
harness = false

[profile.release]
lto = true

[lib]
path = "src/lib.rs"
