[package]
name = "be-music-cabinet"
version = "0.1.0"
edition = "2024"

[dependencies]
smol = "2.0.2"
sha3 = "0.10.8"
encoding_rs = "0.8.35"
serde = "1.0.219"
serde_json = "1.0.142"

bms-rs = { git = "https://github.com/MikuroXina/bms-rs.git" }

zip = "4.3.0"
sevenz-rust = "0.6.1"
unrar = "0.5.8"
num_cpus = "1.17.0"
futures = "0.3.31"
strsim = "0.11.1"
xlsxwriter = "0.6.1"

[dev-dependencies]
tempfile = "3.20.0"
