[package]
name = "be-music-cabinet"
version = "0.1.0"
edition = "2024"
default-run = "be-music-cabinet-cli"

[dependencies]
smol = "2.0.2"
sha3 = "0.10.8"
encoding_rs = "0.8.35"
serde = "1.0.219"
serde_json = "1.0.142"

bms-rs = { git = "https://github.com/MikuroXina/bms-rs.git" }

zip = "4.3.0"
sevenz-rust = "0.6.1"
unrar = "0.5.8"
num_cpus = "1.17.0"
futures = "0.3.31"
strsim = "0.11.1"
xlsxwriter = "0.6.1"
regex = "1.10.4"
once_cell = "1.20.0"
clap = { version = "4.4", features = ["derive"] }
iced = { version = "0.12", features = ["smol"] }

[dev-dependencies]
tempfile = "3.20.0"

[lib]
name = "be_music_cabinet"

[[bin]]
name = "be-music-cabinet-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "be-music-cabinet-gui"
path = "src/bin/main.rs"