[package]
name = "be-music-cabinet"
version = "0.1.0"
edition = "2024"
default-run = "be-music-cabinet"

[dependencies]
smol = "2.0.2"
sha3 = "0.10.8"
encoding_rs = "0.8.35"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

bms-rs = { git = "https://github.com/MikuroXina/bms-rs.git" }

zip = "4.3.0"
sevenz-rust = "0.6.1"
unrar = "0.5.8"
num_cpus = "1.17.0"
futures = "0.3.31"
strsim = "0.11.1"
xlsxwriter = "0.6.1"
regex = "1.10.4"
once_cell = "1.20.0"
clap = { version = "4.4", features = ["derive"] }
iced = { version = "0.12", features = ["smol"] }
syn = { version = "2", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
fontdb = "0.23.0"
ttf-parser = "0.25.1"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.20.0"

[lib]
name = "be_music_cabinet"

[[bin]]
name = "be-music-cabinet-cli"
path = "src/bin/cli.rs"
