[package]
name = "bms-resource-toolbox-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bms-resource-toolbox-cli = { path = "../cli" }
lang-core = { path = "../lang-core" }

smol = { workspace = true }
sha3 = { workspace = true }
encoding_rs = { workspace = true }
sysinfo = { workspace = true }

futures = { workspace = true }
which = { workspace = true }
strsim = { workspace = true }

once_cell = { workspace = true }
clap = { workspace = true }
iced = { workspace = true }
blocking = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
fontdb = { workspace = true }
ttf-parser = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rfd = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }